--- a/src/Components/HomePage/NavBar.css
+++ b/src/Components/HomePage/NavBar.css
@@ -1,7 +1,12 @@
 .navbar .navbar-nav .nav-link {
-  color: #fff;
+  color: black;
   font-size: 1.1em;
 }
+
+.logo-text {
+  color: black !important;
+}
+
 @media screen and (min-width: 992px) {
   .navbar .navbar-nav .nav-link {
     padding: 0 0.5em;
